// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`color\` is passed 1`] = `
.c0 .checkbox__box {
  border-radius: 3px;
  background-clip: padding-box;
  vertical-align: top;
}

.c0 .checkbox__tick {
  bottom: 0 !important;
  left: 0 !important;
  width: 100% !important;
  height: 100% !important;
  background-size: 100%;
  background-image: url("tick.svg") !important;
}

.c0.checkbox_size_s .checkbox__label {
  line-height: 15px;
}

.c0.checkbox_size_m .checkbox__label {
  line-height: 17px;
}

<span
  class="control checkbox checkbox_view_classic checkbox_theme_normal checkbox_size_s checkbox_lines_multi c0"
  data-lego="react"
>
  <span
    class="checkbox__box"
    data-lego="react"
  >
    <input
      aria-labelledby="labeluniq2"
      autocomplete="off"
      class="checkbox__control"
      data-lego="react"
      id="uniq2"
      type="checkbox"
      value=""
    />
    <i
      class="checkbox__tick"
      data-lego="react"
    />
  </span>
</span>
`;

exports[`\`tickColor\` is passed 1`] = `
.c0 .checkbox__box {
  border-radius: 3px;
  background-clip: padding-box;
  vertical-align: top;
}

.c0 .checkbox__tick {
  bottom: 0 !important;
  left: 0 !important;
  width: 100% !important;
  height: 100% !important;
  background-size: 100%;
  background-image: url("tick_black.svg") !important;
}

.c0.checkbox_size_s .checkbox__label {
  line-height: 15px;
}

.c0.checkbox_size_m .checkbox__label {
  line-height: 17px;
}

<span
  class="control checkbox checkbox_view_classic checkbox_theme_normal checkbox_size_s checkbox_lines_multi c0"
  data-lego="react"
>
  <span
    class="checkbox__box"
    data-lego="react"
  >
    <input
      aria-labelledby="labeluniq3"
      autocomplete="off"
      class="checkbox__control"
      data-lego="react"
      id="uniq3"
      type="checkbox"
      value=""
    />
    <i
      class="checkbox__tick"
      data-lego="react"
    />
  </span>
</span>
`;

exports[`with defaults 1`] = `
.c0 .checkbox__box {
  border-radius: 3px;
  background-clip: padding-box;
  vertical-align: top;
}

.c0 .checkbox__tick {
  bottom: 0 !important;
  left: 0 !important;
  width: 100% !important;
  height: 100% !important;
  background-size: 100%;
  background-image: url("tick.svg") !important;
}

.c0.checkbox_size_s .checkbox__label {
  line-height: 15px;
}

.c0.checkbox_size_m .checkbox__label {
  line-height: 17px;
}

<span
  class="control checkbox checkbox_view_classic checkbox_theme_normal checkbox_size_s checkbox_lines_multi c0"
  data-lego="react"
>
  <span
    class="checkbox__box"
    data-lego="react"
  >
    <input
      aria-labelledby="labeluniq1"
      autocomplete="off"
      class="checkbox__control"
      data-lego="react"
      id="uniq1"
      type="checkbox"
      value=""
    />
    <i
      class="checkbox__tick"
      data-lego="react"
    />
  </span>
</span>
`;
